# investing

./: .gitignore  .prototools  AGENTS.md  README.md
.agents/skills/deep-review/: SKILL.md
.moon/: toolchains.yml  workspace.yml
apps/portfolio-reader/: .gitignore  README.md  moon.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
apps/portfolio-reader/.openai/: hosting.json
apps/portfolio-reader/app/: globals.css  layout.tsx  markdown-reader.tsx  page.tsx
apps/portfolio-reader/patches/: micromark-extension-gfm-table@2.1.1.patch
apps/portfolio-reader/public/: _headers
apps/portfolio-reader/scripts/: sync-research-data.mjs
apps/portfolio-reader/tests/: markdown-reader.test.tsx  rendered-html.test.mjs
apps/portfolio-reader/worker/: index.ts
apps/portfolio-tools/: moon.yml  pyproject.toml
apps/portfolio-tools/src/investing_portfolio_tools/: __init__.py  portfolio_summary.py
apps/portfolio-tools/tests/: test_portfolio_summary.py
companies/SGX/BSL_Raffles-Medical-Group/: index.md  questions.md  scorecard.md  sources.md  timeline.md  valuation.md
docs/: research-method.md
portfolio/: decisions.md  holdings.csv  mandate.md  watchlist.csv
schemas/: evaluation-log.schema.json
templates/: review-update.md
templates/company/: thesis.md
vault/: README.md
vault/portfolio/: cash.csv  decisions.md  mandate.md  watchlist.csv
vault/schemas/: evaluation-log.schema.json
vault/templates/: review-update.md
vault/templates/company/: index.md  questions.md  scorecard.md  timeline.md  valuation.md
(+32 files in other folders)
